--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travelulu</title>
+    <link
+      rel="shortcut icon"
+      href="/assets/images/travelulu-01-01.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travelulu</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-
-<body>
-
-
-</body>
-
+  <body></body>
 </html>
