--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travelulu</title>
-    <link
-      rel="shortcut icon"
-      href="/assets/images/travelulu-01-01.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="/assets/images/travelulu-01-01.svg" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
