Add inputs and search button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,5 +8,41 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
-  <body></body>
+  <body>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Travelulu</title>
+        <link rel="shortcut icon" href="/assets/images/travelulu-01-01.svg" />
+        <link rel="stylesheet" href="assets/css/styles.css" />
+      </head>
+      <body>
+        <h2>Find deals on hotels, homes and much more...</h2>
+
+        <div class="searcher-primary">
+          <input
+            class="searcher-primary__input"
+            type="text"
+            placeholder="Where are you going?"
+          />
+
+          <input
+            class="searcher-primary__input"
+            type="text"
+            placeholder="2 adults - 0 children"
+          />
+
+          <input
+            class="searcher-primary__input"
+            type="text"
+            placeholder="Check-in - Check-out"
+          />
+
+          <button class="button">Search</button>
+        </div>
+      </body>
+    </html>
+  </body>
 </html>
