Add all icons to inputs and completed component layout

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <header></header>
     <main class="container">
       <div class="searcher-primary">
-        <h2>Find deals on hotels, homes and much more...</h2>
+        <h2 class="searcher-primary__title">
+          Find deals on hotels, homes and much more...
+        </h2>
         <div class="searcher-primary__wrapper-input">
           <input
-            class="searcher-primary__input"
+            class="searcher-primary__input search-input"
             type="text"
             placeholder="Where are you going?"
           />
@@ -32,17 +34,31 @@
           />
         </div>
 
-        <input
-          class="searcher-primary__input"
-          type="text"
-          placeholder="2 adults - 0 children"
-        />
+        <div class="searcher-primary__wrapper-input">
+          <input
+            class="searcher-primary__input search-input"
+            type="text"
+            placeholder="2 adults - 0 children"
+          />
+          <img
+            class="searcher-primary__select-icon"
+            src="/assets/images/select_icon-01.svg"
+            alt=""
+          />
+        </div>
 
-        <input
-          class="searcher-primary__input"
-          type="text"
-          placeholder="Check-in - Check-out"
-        />
+        <div class="searcher-primary__wrapper-input">
+          <input
+            class="searcher-primary__input search-input"
+            type="text"
+            placeholder="Check-in - Check-out"
+          />
+          <img
+            class="searcher-primary__select-icon"
+            src="/assets/images/select_icon-01.svg"
+            alt=""
+          />
+        </div>
 
         <button class="button">Search</button>
       </div>
