Add responsiveness to searcher component

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   <body>
     <header></header>
     <main class="container">
+      <h2 class="searcher-primary__title">
+        Find deals on hotels, homes and much more...
+      </h2>
+
       <div class="searcher-primary">
-        <h2 class="searcher-primary__title">
-          Find deals on hotels, homes and much more...
-        </h2>
-        <div class="searcher-primary__wrapper-input">
+        <div class="searcher-primary__wrapper-input searcher-primary--bigger">
           <input
             class="searcher-primary__input search-input"
             type="text"
