Add buttons to secondary searcher layout

--- a/index.html
+++ b/index.html
@@ -70,7 +70,75 @@
       </section>
 
       <section class="main-section">
-        <div class="searcher-secondary"></div>
+        <div class="searcher-secondary">
+
+          <h2>Search</h2>
+
+          <span>Destination/property name</span>
+          <div class="searcher-secondary__wrapper-button">
+            <button class="searcher-secondary__button">Gold Coast</button>
+            <img
+              class="searcher-secondary__select-icon"
+              src="/assets/images/select_icon-01.svg"
+              alt=""
+            />
+            <img
+              class="searcher-secondary__select-icon-left"
+              src="/assets/images/Search.svg"
+              alt=""
+            />
+          </div>
+
+          <span>Check-in date</span>
+          <div class="searcher-secondary__wrapper-button">
+            <button class="searcher-secondary__button">Check-in date</button>
+            <img
+              class="searcher-secondary__select-icon"
+              src="/assets/images/select_icon-01.svg"
+              alt=""
+            />
+            <img
+              class="searcher-secondary__select-icon-left"
+              src="/assets/images/Calandar.svg"
+              alt=""
+            />
+          </div>
+
+          <span>Check-out date</span>
+          <div class="searcher-secondary__wrapper-button">
+            <button class="searcher-secondary__button">Check-out date</button>
+            <img
+              class="searcher-secondary__select-icon"
+              src="/assets/images/select_icon-01.svg"
+              alt=""
+            />
+            <img
+              class="searcher-secondary__select-icon-left"
+              src="/assets/images/Calandar.svg"
+              alt=""
+            />
+          </div>
+
+           <span>Travellers</span>
+          <div class="searcher-secondary__wrapper-button">
+            <button class="searcher-secondary__button">2 adults - 0 children</button>
+            <img
+              class="searcher-secondary__select-icon"
+              src="/assets/images/select_icon-01.svg"
+              alt=""
+            />
+            <img
+              class="searcher-secondary__select-icon-left"
+              src="/assets/images/Profile.svg"
+              alt=""
+            />
+          </div>
+
+         <button class="button">Search</button>
+
+          </div>
+          
+        </div>
         <div class="wrapper-properties">
           <h2>254 Properties Found</h2>
           <article class="property">
