Add CSS measures and properties to buttons in secondary  searcher block

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
       <section class="main-section">
         <div class="searcher-secondary">
-
-          <h2>Search</h2>
+          <h2 class="main-section__search-title">Search</h2>
 
           <span>Destination/property name</span>
           <div class="searcher-secondary__wrapper-button">
@@ -119,9 +118,11 @@
             />
           </div>
 
-           <span>Travellers</span>
+          <span>Travellers</span>
           <div class="searcher-secondary__wrapper-button">
-            <button class="searcher-secondary__button">2 adults - 0 children</button>
+            <button class="searcher-secondary__button">
+              2 adults - 0 children
+            </button>
             <img
               class="searcher-secondary__select-icon"
               src="/assets/images/select_icon-01.svg"
@@ -134,11 +135,11 @@
             />
           </div>
 
-         <button class="button">Search</button>
-
-          </div>
-          
+          <button class="button searcher-secondary__search--button">
+            Search
+          </button>
         </div>
+
         <div class="wrapper-properties">
           <h2>254 Properties Found</h2>
           <article class="property">
