Add measures adjustments to texts

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <div class="searcher-secondary">
           <h2 class="main-section__search-title">Search</h2>
 
-          <span>Destination/property name</span>
+          <span class="searcher-secondary__label"
+            >Destination/property name</span
+          >
           <div class="searcher-secondary__wrapper-button">
             <button class="searcher-secondary__button">Gold Coast</button>
             <img
@@ -88,7 +90,7 @@
             />
           </div>
 
-          <span>Check-in date</span>
+          <span class="searcher-secondary__label">Check-in date</span>
           <div class="searcher-secondary__wrapper-button">
             <button class="searcher-secondary__button">Check-in date</button>
             <img
@@ -103,7 +105,7 @@
             />
           </div>
 
-          <span>Check-out date</span>
+          <span class="searcher-secondary__label">Check-out date</span>
           <div class="searcher-secondary__wrapper-button">
             <button class="searcher-secondary__button">Check-out date</button>
             <img
@@ -118,7 +120,7 @@
             />
           </div>
 
-          <span>Travellers</span>
+          <span class="searcher-secondary__label">Travellers</span>
           <div class="searcher-secondary__wrapper-button">
             <button class="searcher-secondary__button">
               2 adults - 0 children
