Add property layout adjustments

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>
               Newcastle City Centre, Newcastle upon Tyne. 1.5km from centre
             </p>
-            <div class="map-wrapper"><svg class="icon icon--locationr">
+            <div class="property__map-wrapper"><svg class="icon icon--location">
                 <use xlink:href="/assets/images/icons.svg#location"></use>
               </svg><span>Show on map</span></div>
             <p>
@@ -81,39 +81,7 @@
             <button class="button button--transparent">Make a booking</button>
           </div>
         </article>
-        <article class="property">
-          <div class="property__images">
-            <img src="assets/images/image1x2.webp" alt="Casa blanca en benidorm" />
-          </div>
-          <div class="property__stars">
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-          </div>
-          <div class="property__content">
-            <h3>Estate de la Newcastle</h3>
-            <p>
-              Newcastle City Centre, Newcastle upon Tyne. 1.5km from centre
-            </p>
-            <div class="map-wrapper"><svg class="icon icon--locationr">
-                <use xlink:href="/assets/images/icons.svg#location"></use>
-              </svg><span>Show on map</span></div>
-            <p>
-              Situated in Newcastle City Centre, Maldron Hotel features free
-              WiFi and a private court yard.
-            </p>
-            <button class="button button--transparent">Make a booking</button>
-          </div>
-        </article>
+
         <article class="property">
           <div class="property__images">
             <img src="assets/images/image1x2.webp" alt="Casa blanca en benidorm" />
@@ -138,7 +106,7 @@
             <p>
               Newcastle City Centre, Newcastle upon Tyne. 1.5km from centre
             </p>
-            <div class="map-wrapper"><svg class="icon icon--locationr">
+            <div class="property__map-wrapper"><svg class="icon icon--location">
                 <use xlink:href="/assets/images/icons.svg#location"></use>
               </svg><span>Show on map</span></div>
             <p>
@@ -148,30 +116,32 @@
             <button class="button button--transparent">Make a booking</button>
           </div>
         </article>
+
         <article class="property">
           <div class="property__images">
             <img src="assets/images/image1x2.webp" alt="Casa blanca en benidorm" />
           </div>
-          <div class="property__stars">
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-            <svg class="icon icon--star">
-              <use xlink:href="/assets/images/icons.svg#star"></use>
-            </svg>
-          </div>
+
           <div class="property__content">
+            <div class="property__stars">
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+            </div>
             <h3>Estate de la Newcastle</h3>
             <p>
               Newcastle City Centre, Newcastle upon Tyne. 1.5km from centre
             </p>
-            <div class="property__map-wrapper"><svg class="icon icon--locationr">
+            <div class="property__map-wrapper"><svg class="icon icon--location">
                 <use xlink:href="/assets/images/icons.svg#location"></use>
               </svg><span>Show on map</span></div>
             <p>
@@ -181,6 +151,46 @@
             <button class="button button--transparent">Make a booking</button>
           </div>
         </article>
+
+        <article class="property">
+          <div class="property__images">
+            <img src="assets/images/image1x2.webp" alt="Casa blanca en benidorm" />
+          </div>
+
+          <div class="property__content">
+            <div class="property__stars">
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+              <svg class="icon icon--star">
+                <use xlink:href="/assets/images/icons.svg#star"></use>
+              </svg>
+            </div>
+            <h3>Estate de la Newcastle</h3>
+            <p>
+              Newcastle City Centre, Newcastle upon Tyne. 1.5km from centre
+            </p>
+            <div class="property__map-wrapper"><svg class="icon icon--location">
+                <use xlink:href="/assets/images/icons.svg#location"></use>
+              </svg><span>Show on map</span></div>
+            <p>
+              Situated in Newcastle City Centre, Maldron Hotel features free
+              WiFi and a private court yard.
+            </p>
+            <button class="button button--transparent">Make a booking</button>
+          </div>
+        </article>
+
+
+
+
+
       </div>
     </section>
     <div class="notifications">
