--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 
 <body>
   <header class="header-main">
-    <h1>Travelulu</h1>
-    <span></span>
+    <div class="header-wrapper container">
+      <h1>Travelulu</h1>
+
+      <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="28" height="4" rx="2" fill="#5F2EEA" />
+        <rect y="7" width="28" height="4" rx="2" fill="#5F2EEA" />
+        <rect y="14" width="28" height="4" rx="2" fill="#5F2EEA" />
+      </svg>
+
+
+    </div>
   </header>
   <main class="container">
     <section class="searcher-main">
