Fix margin top in secondary searcher

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     </div>
     <div class="banner container">
       <span>Need more information to get started?</span>
-      <button class="button button-transparent"></button>
+      <button class="button button-transparent">Contact us</button>
     </div>
     <footer></footer>
   </main>
